Fix size and spacing of radio buttons.

--- a/css/main/client.css
+++ b/css/main/client.css
@@ -924,8 +924,8 @@ input[type="radio" i]:checked:active::after {
   padding: 0 !important;
   font-weight: 400 !important;
   font-size: var(--zehn-size-14) !important;
-  line-height: 24px !important;
-  height: 24px !important;
+  line-height: 32px !important;
+  height: 32px !important;
   color: var(--zehn-color-text-primary) !important;
   border-radius: 0 !important;
   margin: 0 !important;
@@ -965,9 +965,10 @@ input[type="radio" i]:checked:active::after {
   height: 20px !important;
   width: 20px !important;
   border-radius: 25px !important;
-  margin: auto 16px auto 0 !important;
+  margin: auto 8px auto 0 !important;
   display: block !important;
   left: 0 !important;
+  box-sizing: border-box !important;
 }
 
 .HijmccPB1BKyhOwhX1EVl.RadioButton::before:hover {
@@ -998,8 +999,8 @@ input[type="radio" i]:checked:active::after {
   position: absolute !important;
   height: 10px !important;
   width: 10px !important;
-  left: 7px !important;
-  top: 7px !important;
+  left: 5px !important;
+  top: calc(50% - 5px) !important;
 }
 
 .HijmccPB1BKyhOwhX1EVl.RadioButton:hover::after {
