--- a/css/settings/settings.css
+++ b/css/settings/settings.css
@@ -2266,7 +2266,7 @@ div._1IsPTEXf7ua_4XbMa3sXyW svg {
   height: 20px !important;
   width: 20px !important;
   border-radius: 25px !important;
-  margin: auto 0 !important;
+  margin: 8px 0 auto 0 !important;
   appearance: none !important;
 }
 
@@ -2378,7 +2378,7 @@ div._1IsPTEXf7ua_4XbMa3sXyW svg {
   color: var(--zehn-color-text-primary) !important;
   border-radius: 0 !important;
   margin: 0 !important;
-  padding: 0 16px !important;
+  padding: 0 0 0 8px !important;
   line-height: 32px !important;
   text-align: left !important;
 }
@@ -2392,7 +2392,7 @@ div._1IsPTEXf7ua_4XbMa3sXyW svg {
   font-weight: 400 !important;
   color: var(--zehn-color-text-secondary) !important;
   margin-bottom: 0 !important;
-  padding: 0 16px !important;
+  padding: 0 0 0 8px !important;
 }
 
 ._7EGqd8bdiXJBd2fj5Hh8r.MYyvJ6lNQZtM4MHwS-Y3g ._2BdpWib8Zcj3QSkXzmGgIB {
